Color contrast fixes on search filters for Emiglio

--- a/themes/emiglio/css/sass/_screen.scss
+++ b/themes/emiglio/css/sass/_screen.scss
@@ -745,7 +745,7 @@ footer {
 #search-filters > ul > li {
     padding: rhythm(.5) 10px;
     background-color: lighten($yellow, 35%);
-    color: darken($yellow, 15%);
+    color: #8b712c;
 }
 
 #item-filters li li,
